# rassine

./: .buildinfo  .gitignore  .gitmodules  CONTRIBUTING.md  DEVELOP.md  Dace_extracted_table.csv  FORMICHAEL.md  INSTALL.md  LOGO.md  README.md  RELEASE.md  Rassine.py  Rassine_functions.py  Rassine_multiprocessed.py  Rassine_trigger.py  STYLEGUIDE.md  TODO.md  TUTORIAL.md  api.html  architecture.html  bibliography.html  compare.py  dace_extract_filenames.py  doc8.ini  extract_fileroot_from_dace_table.py  genindex.html  graph.html  harpn.ini  harpn.sh  harps03.ini  harps03.sh  important.html  index.html  init_spectra_library.sh  mypy.ini  objects.inv  pipeline.html  py-modindex.html  pyproject.toml  quickstart.html  (+24 more)
.github/workflows/: build-docs.yml  ci.yml  test-report.yml
_autosummary/: rassine.imports.data.DACE.html  rassine.imports.data.IndividualBasicRow.html  rassine.imports.data.IndividualImportedRow.html  rassine.imports.data.IndividualReinterpolatedRow.html  rassine.imports.data.PickledIndividualSpectrum.html  rassine.imports.data.ReinterpolatedSpectrumPickle.html  rassine.imports.data.html  rassine.imports.html  rassine.imports.preprocess_import.Task.html  rassine.imports.preprocess_import.cli.html  rassine.imports.preprocess_import.find_hole.html  rassine.imports.preprocess_import.get_parser.html  rassine.imports.preprocess_import.html  rassine.imports.preprocess_import.preprocess_import.html  rassine.imports.preprocess_import.run.html  rassine.imports.preprocess_table.Task.html  rassine.imports.preprocess_table.cli.html  rassine.imports.preprocess_table.get_parser.html  rassine.imports.preprocess_table.html  rassine.imports.preprocess_table.run.html  rassine.imports.reinterpolate.ReinterpolationSettings.html  rassine.imports.reinterpolate.Task.html  rassine.imports.reinterpolate.cli.html  rassine.imports.reinterpolate.get_parser.html  rassine.imports.reinterpolate.html  rassine.imports.reinterpolate.reinterpolate.html  rassine.imports.reinterpolate.run.html  rassine.lib.analysis.find_nearest1.html  rassine.lib.analysis.grouping.html  rassine.lib.analysis.html  rassine.lib.analysis.rolling_iq.html  rassine.lib.data.LoggingLevel.html  rassine.lib.data.NameRow.html  rassine.lib.data.PathPattern.html  rassine.lib.data.PickleProtocol.html  rassine.lib.data.html  rassine.lib.html  rassine.lib.io.NoCheck.html  rassine.lib.io.html  rassine.lib.io.open_pickle.html  (+128 more)
_sources/: api.rst  important.rst  pipeline.md  quickstart.md
_sources/_autosummary/: rassine.imports.data.DACE.rst  rassine.imports.data.IndividualBasicRow.rst  rassine.imports.data.IndividualImportedRow.rst  rassine.imports.data.IndividualReinterpolatedRow.rst  rassine.imports.data.PickledIndividualSpectrum.rst  rassine.imports.data.ReinterpolatedSpectrumPickle.rst  rassine.imports.data.rst  rassine.imports.preprocess_import.Task.rst  rassine.imports.preprocess_import.cli.rst  rassine.imports.preprocess_import.find_hole.rst  rassine.imports.preprocess_import.get_parser.rst  rassine.imports.preprocess_import.preprocess_import.rst  rassine.imports.preprocess_import.rst  rassine.imports.preprocess_import.run.rst  rassine.imports.preprocess_table.Task.rst  rassine.imports.preprocess_table.cli.rst  rassine.imports.preprocess_table.get_parser.rst  rassine.imports.preprocess_table.rst  rassine.imports.preprocess_table.run.rst  rassine.imports.reinterpolate.ReinterpolationSettings.rst  rassine.imports.reinterpolate.Task.rst  rassine.imports.reinterpolate.cli.rst  rassine.imports.reinterpolate.get_parser.rst  rassine.imports.reinterpolate.reinterpolate.rst  rassine.imports.reinterpolate.rst  rassine.imports.reinterpolate.run.rst  rassine.imports.rst  rassine.lib.analysis.find_nearest1.rst  rassine.lib.analysis.grouping.rst  rassine.lib.analysis.rolling_iq.rst  rassine.lib.analysis.rst  rassine.lib.data.LoggingLevel.rst  rassine.lib.data.NameRow.rst  rassine.lib.data.PathPattern.rst  rassine.lib.data.PickleProtocol.rst  rassine.lib.data.rst  rassine.lib.io.NoCheck.rst  rassine.lib.io.open_pickle.rst  rassine.lib.io.rst  rassine.lib.io.save_pickle.rst  (+128 more)
_sources/cli/: index.rst  matching_anchors_filter.rst  matching_anchors_scan.rst  matching_diff.rst
_sources/dev/: documentation.md  quickstart.md  release.md  tests.md
cli/: index.html  matching_anchors_filter.html  matching_anchors_scan.html  matching_diff.html  preprocess_import.html  preprocess_table.html  rassine.html  reinterpolate.html  stacking_create_groups.html  stacking_master_spectrum.html  stacking_stack.html
dev/: documentation.html  index.html  quickstart.html  release.html  style.html  tests.html
docs/: api.rst  conf.py  index.rst  install.rst  requirements.txt  tools.rst
docs/source/: Docstring_rassine.old  INSTALL.md  RELEASE.md  TODO.md  api.rst  architecture.md  conf.py  design_decisions.rst  graph.rst  howto.md  index.rst  pipeline.md  quickstart.md  refs.bib  tutorial.rst
doctring_rassine_latex/: Docstring_rassine.aux  Docstring_rassine.tex  Tuto_rassine.aux  Tuto_rassine.out  Tuto_rassine.tex  Tuto_rassine.toc
products/: border_scan_output.ini  preprocessed.ini
rassine/: __init__.py  analysis.py  arguments.py  config.py  data.py  functions.py  io.py  math.py  misc.py  paths.py  pile.py  ras.py  test.ipynb  tybles.py  types.py  unused.py  util.py
rassine/cli/: anchor_filter.py  anchor_scan.py  base.py  borders_prepare.py  borders_reinterpolate.py  borders_scan.py  check_and_enumerate.py  dace_extract_filenames.py  data.py  enumerate_table.py  enumerate_table_rows.py  main.py  matching_anchors_filter.py  matching_anchors_scan.py  matching_diff.py  pickle_compare.py  preprocess.py  preprocess_import.py  preprocess_table.py  reinterpolate.py  reorder_csv.py  savgol_filter.py  savgol_gui.py  sort_csv.py  spectrum_csv2pickle.py  spectrum_fits2pickle.py  spectrum_pickle2csv.py  stacking_create_groups.py  stacking_master_spectrum.py  stacking_stack.py
rassine/data/: dace.py
rassine/functions/: __init__.py  misc.py  (+6 more)
test/: HD110315_light_test.bats  HD23249_light_test.bats  test_HD23249_light.bats  test_version_and_tag.bats
(+63 files in other folders)
