[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
line-length = 99
target_version = ['py38']

[tool.isort]
line_length = 99
profile = "black"
py_version = 38

[tool.poetry]
authors = [
  "Michael Cretignier <michael.cretignier@gmail.com>",
  "Denis Rosset <physics@denisrosset.com>",
  "Jérémie Francfort <jeremie.francfort@unige.ch>",
]
description = "RASSINE astronomy tool"
license = "BSD-3-Clause"
name = "rassine"
readme = "README.md"
repository = "https://github.com/denisrosset/rassine.git"
version = "0.1.0"

[tool.poetry.scripts]
preprocess_import = "rassine.cli.preprocess_import:cli"
preprocess_table = "rassine.cli.preprocess_table:cli"

enumerate_table_column_unique_values = "rassine.cli.enumerate_table_column_unique_values:cli"
enumerate_table_rows = "rassine.cli.enumerate_table_rows:cli"

matching_anchors_filter = "rassine.cli.matching_anchors_filter:cli"
matching_anchors_scan = "rassine.cli.matching_anchors_scan:cli"
matching_diff = "rassine.cli.matching_diff:cli"
pickle_compare = "rassine.cli.pickle_compare:cli"
rassine = "rassine.cli.main.rassine:cli"
reinterpolate = "rassine.cli.reinterpolate:cli"
reorder_csv = "rassine.cli.reorder_csv:cli"
sort_csv = "rassine.cli.sort_csv:cli"
spectrum_csv2pickle = "rassine.cli.spectrum_csv2pickle:cli"
spectrum_pickle2csv = "rassine.cli.spectrum_pickle2csv:cli"
stacking_create_groups = "rassine.cli.stacking_create_groups:cli"
stacking_master_spectrum = "rassine.cli.stacking_master_spectrum:cli"
stacking_stack = "rassine.cli.stacking_stack:cli"

[tool.poetry.dependencies]
PyQt5 = "^5.15.6"
PyQt5-Qt = "^5.15.2"
PyQt5-sip = "^12.9.1"
astropy = "^4.2.1"
configpile = {version = "^10.0.3", extras = ["parsy", "rich"]}
deepdish = "^0.3.7"
filelock = "^3.6.0"
h5py = "^2.10.0"
matplotlib = "^3.3.4"
nptyping = "^1.4.4"
numpy = "^1.22.3"
pandas = "^1.2.4"
parsy = "^1.4.0"
python = "^3.8,<3.11"
recursive-diff = "^1.0.0"
rich = "^11.2.0"
scipy = "^1.6.2"
tybles = "^0.3.2"
typeguard = "^2.13.3"
typing-extensions = "^4.1.1"

ipywidgets = {version = "^7.7.0", optional = true}
myst-nb = {version = "^0.15.0", optional = true}
sphinx = {version = "4.5.0", optional = true}
sphinx-argparse = {version = "^0.3.1", optional = true}
sphinx-autodoc-typehints = {version = "^1.18.3", optional = true}
sphinx-book-theme = {version = "^0.3.2", optional = true}
sphinxcontrib-bibtex = {version = "^2.4.2", optional = true}

[tool.poetry.extras]
docs = [
  "myst-nb",
  "sphinx",
  "sphinx-argparse",
  "sphinx-autodoc-typehints",
  "sphinx-book-theme",
  "sphinxcontrib-bibtex",
  "ipywidgets",
]

[tool.poetry.dev-dependencies]
black = "^22.1.0"
commitizen = "^2.21.2"
doc8 = "^0.10.1"
esbonio = "^0.13.0"
isort = "^5.10.1"
pandas-stubs = "^1.2.0.43"
pytest = "^7.0.1"
rstcheck = "^3.3.1"

[tool.pytest.ini_options]
addopts = [
  "--tb=short",
]

[tool.pylint.MAIN]
disable = ["C0103", "W1203"]
load-plugins = [
  "pylint.extensions.docparams",
  "pylint.extensions.typing",
]
py-version = "3.8"
