[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
line-length = 99
target_version = ['py38']

[tool.isort]
line_length = 99
profile = "black"
py_version = 38

[tool.poetry]
authors = [
  "Michael Cretignier <michael.cretignier@gmail.com>",
  "Denis Rosset <physics@denisrosset.com>",
  "Jérémie Francfort <jeremie.francfort@unige.ch>",
]
description = "RASSINE astronomy tool"
license = "BSD-3-Clause"
name = "rassine"
readme = "README.md"
repository = "https://github.com/pegasilab/rassine.git"
version = "0.4.0"

[tool.poetry.scripts]
enumerate_table_column_unique_values = "rassine.tools.enumerate_table_column_unique_values:cli"
enumerate_table_rows = "rassine.tools.enumerate_table_rows:cli"
pickle_compare = "rassine.tools.pickle_compare:cli"
reorder_csv = "rassine.tools.reorder_csv:cli"
sort_csv = "rassine.tools.sort_csv:cli"

preprocess_import = "rassine.imports.preprocess_import:cli"
preprocess_table = "rassine.imports.preprocess_table:cli"
reinterpolate = "rassine.imports.reinterpolate:cli"

stacking_create_groups = "rassine.stacking.stacking_create_groups:cli"
stacking_master_spectrum = "rassine.stacking.stacking_master_spectrum:cli"
stacking_stack = "rassine.stacking.stacking_stack:cli"

rassine = "rassine.rassine.rassine:cli"

matching_anchors_filter = "rassine.matching.matching_anchors_filter:cli"
matching_anchors_scan = "rassine.matching.matching_anchors_scan:cli"
matching_diff = "rassine.matching.matching_diff:cli"

compare_normalized_output = "rassine.tools.compare_normalized_output:cli"

[tool.poetry.dependencies]
astropy = "^5.0.4"
configpile = {version = "^10.1.1", extras = ["parsy", "rich"]}
filelock = "^3.6.0"
matplotlib = "^3.5.2"
numpy = "^1.23.0"
pandas = "^1.4.2"
parsy = "^1.4.0"
python = "^3.8,<3.11"
recursive-diff = "^1.1.0"
rich = "^11.2.0"
scipy = "^1.8.1"
tybles = "^0.3.2"
typeguard = "^2.13.3"
typing-extensions = "^4.4.0"

myst-nb = {version = "^0.17.1", optional = true}
sphinx = {version = "^5.3.0", optional = true}
sphinx-argparse = {version = "^0.4.0", optional = true}
sphinx-autodoc-typehints = {version = "^1.19.5", optional = true}
sphinx-book-theme = {git = "https://github.com/executablebooks/sphinx-book-theme.git", rev = "060ba47685b49d2ea0fdf86af65fac4e35912618"}
sphinxcontrib-bibtex = {version = "^2.5.0", optional = true}
sphinxcontrib-programoutput = {version = "^0.17", optional = true}

[tool.poetry.extras]
docs = [
  "myst-nb",
  "sphinx",
  "sphinx-argparse",
  "sphinx-autodoc-typehints",
  "furo",
  "sphinxcontrib-bibtex",
  "sphinxcontrib-programoutput",
]

[tool.poetry.dev-dependencies]
black = "^22.10.0"
doc8 = "^1.0.0"
isort = "^5.10.1"
pandas-stubs = "^1.5.2"
pytest = "^7.1.1"
rstcheck = "^6.1.1"

[tool.pytest.ini_options]
addopts = [
  "--tb=short",
]

[tool.pylint.MAIN]
disable = ["C0103", "W1203"]
load-plugins = [
  "pylint.extensions.docparams",
  "pylint.extensions.typing",
]
py-version = "3.8"

[tool.pyright]
exclude = [".venv", "test/bats", ".git", "**/__pycache__", "**/node_modules", "**/.*"]

[tool.doc8]
max-line-length = 99
